style(integration): String.format -> String#formatted